Blender 2.83 Alpha crashes on clicking an appended proxy object part with ghost icon in the outliner #75378

Closed
opened 2020-04-04 14:22:06 +02:00 by Roman Markov · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 760M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31

Blender Version
Broken versions:

  • 2.83 (sub 6), branch: master, commit date: 2020-03-09 13:47, hash: 598ab525da
  • 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: 7c0e285948

Worked:

  • 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca
  • 2.79 (sub 0), branch: master, commit date: 2018-03-22 14:10, hash: f4dc9f9d68b
  • 2.79 (sub 7), branch: blender2.7, commit date: 2019-02-20 22:20, hash: ccd291aafbe5

Short description of error
Blender 2.83 Alpha crushes on clicking an appended proxy object part with ghost icon in the outliner in view layer mode.
g7qCbxvjqv.mp4

Exact steps for others to reproduce the error

  1. Create a mesh object in any Blender version and save it as .blend.
  2. Open a new Blender file and link the mesh to it.
  3. Apply Make Proxy to the object and save as another .blend file.
  4. Open a new Blender file using Blender 2.83 Alpha.
  5. Append the linked object proxy and click it in the outliner in view layer mode.

or

  • Unzip attached file
  • Open paleolithic_2_79_cube_linked.blend

Click on the ghost icon in the outliner

blender_2_83_alpha_proxy_crash.zip

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 760M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 425.31 **Blender Version** Broken versions: * 2.83 (sub 6), branch: master, commit date: 2020-03-09 13:47, hash: `598ab525da` * 2.83 (sub 11), branch: master, commit date: 2020-04-03 21:41, hash: `7c0e285948` Worked: * 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` * 2.79 (sub 0), branch: master, commit date: 2018-03-22 14:10, hash: `f4dc9f9d68b` * 2.79 (sub 7), branch: blender2.7, commit date: 2019-02-20 22:20, hash: `ccd291aafbe5` **Short description of error** Blender 2.83 Alpha crushes on clicking an appended proxy object part with ghost icon in the outliner in view layer mode. [g7qCbxvjqv.mp4](https://archive.blender.org/developer/F8447800/g7qCbxvjqv.mp4) **Exact steps for others to reproduce the error** 1. Create a mesh object in any Blender version and save it as .blend. 2. Open a new Blender file and link the mesh to it. 3. Apply Make Proxy to the object and save as another .blend file. 4. Open a new Blender file using Blender 2.83 Alpha. 5. Append the linked object proxy and click it in the outliner in view layer mode. or - Unzip attached file - Open `paleolithic_2_79_cube_linked.blend` # Click on the ghost icon in the outliner [blender_2_83_alpha_proxy_crash.zip](https://archive.blender.org/developer/F8447871/blender_2_83_alpha_proxy_crash.zip)
Author

Added subscriber: @unwave

Added subscriber: @unwave
Roman Markov changed title from Blender 2.83 Alpha crashes on clicking an appended proxy object in the outliner to Blender 2.83 Alpha crashes on clicking an appended proxy object part with ghost icon in the outliner 2020-04-04 14:38:22 +02:00
Member

Added subscriber: @ankitm

Added subscriber: @ankitm

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

In fact it seems to be a regression.

In fact it seems to be a regression.

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

Cannot reproduce the cash with current master, so would assume this has been fixed already, can you please check again? thanks.

Cannot reproduce the cash with current master, so would assume this has been fixed already, can you please check again? thanks.

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

For me the crash is consistent. And in the Debug build I have this error message:

Run-Time Check Failure #3 - The variable 'parent_tselem' is being used without being initialized.

Initializing that variable fixs the problem:

diff --git a/source/blender/editors/space_outliner/outliner_select.c b/source/blender/editors/space_outliner/outliner_select.c
index 64d86293fb7..0971d3526ad 100644
--- a/source/blender/editors/space_outliner/outliner_select.c
+++ b/source/blender/editors/space_outliner/outliner_select.c
@@ -308,7 +308,7 @@ static eOLDrawState tree_element_set_active_object(bContext *C,
                                                    bool recursive)
 {
   TreeStoreElem *tselem = TREESTORE(te);
-  TreeStoreElem *parent_tselem;
+  TreeStoreElem *parent_tselem = NULL;
   Scene *sce;
   Base *base;
   Object *ob = NULL;

The bug was probably introduced by 3a653974

For me the crash is consistent. And in the Debug build I have this error message: ``` Run-Time Check Failure #3 - The variable 'parent_tselem' is being used without being initialized. ``` Initializing that variable fixs the problem: ``` diff --git a/source/blender/editors/space_outliner/outliner_select.c b/source/blender/editors/space_outliner/outliner_select.c index 64d86293fb7..0971d3526ad 100644 --- a/source/blender/editors/space_outliner/outliner_select.c +++ b/source/blender/editors/space_outliner/outliner_select.c @@ -308,7 +308,7 @@ static eOLDrawState tree_element_set_active_object(bContext *C, bool recursive) { TreeStoreElem *tselem = TREESTORE(te); - TreeStoreElem *parent_tselem; + TreeStoreElem *parent_tselem = NULL; Scene *sce; Base *base; Object *ob = NULL; ``` The bug was probably introduced by 3a653974

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

@mano-wii: +1 thx checking!

@mano-wii: +1 thx checking!
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

@mano-wii you're fix seems very reasonable, just go ahead.

@mano-wii you're fix seems very reasonable, just go ahead.

This issue was referenced by ab8e7ffc64

This issue was referenced by ab8e7ffc6411da2bbd9cfb574b8dfcb86390c5ea

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-04-10 16:22:08 +02:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75378
No description provided.