Fix T75378: Crash on clicking in the ghost icon of an appended proxy object